    * Small debug message cleanups.
    * Small fixes for 'net ads password'.
    * Add TCP fallback for our implementation of the CHANGEPW 
      kpasswd calls.
    * BUG 3843: Allow to set passwords directly when creating users 
      via "net rpc user add" 
    * Add "rpc shell" to the usage text for the net command.
    * Winbindd user aliases lookup fixes for large domains.


o   Bjoern Jacke <samba@j3e.de>.
    * Fix DMAPI compile failures on AIX and True64.
    * Fix AIX PIC suffix (use .o instead of .po).


o   Volker Lendecke <vl@samba.org>
    * Fixes for various Klocwork defect reports.
    * Fixes for various Coverity defect reports.
    * BUG 3848: Fix WinXP join error in a Samba domain using ldapsam.



o   Derrell Lipman <derrell@samba.org>
    [libsmbclient]
    * BUG 3814: Only set the DFS capability flag in client requests
      if the share is a DFS root.


o   Jason Mader <jason@ncac.gwu.edu>
    * Compiler warning fixes.


o   James Peach <jpeach@sgi.com>
    * Ensure smbclient always prompts on standard output when in
      interactive mode.


o   Andreas Schwab
    * Correct syntax error in aclocal.m4.


Release Notes for older release follow:

      --------------------------------------------------
                   =================================
                   Release Notes for Samba 3.0.23rc2
                              Jun 9, 2006
                   =================================

Thanks very much to those people who spent time testing the RC1 
release and reported their findings.  We would like to especially 
thank Thomas Bork <tombork@web.de> for his numerous reports. 
We believe that RC2 is in much better shape in a large part due 
to his efforts.

We would also like to thank the developers of Klocwork for their
analysis of the Samba source tree.  This release candidate includes 
multiple fixes based on reports from the Klocwork code analyzer.

Common issues addressed in 3.0.23rc2 include:
